--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_tts: ^4.2.3
   logger: ^2.6.2
   shared_preferences: ^2.5.3
+  vibration: ^3.1.5
 
 dev_dependencies:
   flutter_test:
