--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^3.0.3
   flutter_tts: ^4.2.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   logger: ^2.6.2
   shared_preferences: ^2.5.3
   vibration: ^3.1.5
