--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,12 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.2
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   audioplayers: ^6.5.1
   auto_size_text: ^3.0.0
+  build_runner: ^2.4.13
   easy_localization: ^3.0.8
   flutter:
     sdk: flutter
@@ -16,14 +17,17 @@ dependencies:
   flutter_tts: ^4.2.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+
   logger: ^2.6.2
   shared_preferences: ^2.5.3
   vibration: ^3.1.5
 
 dev_dependencies:
+  analyzer: ^6.4.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
