--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
 dependencies:
   audioplayers: ^6.5.1
   auto_size_text: ^3.0.0
-  build_runner: ^2.4.13
   easy_localization: ^3.0.8
   flutter:
     sdk: flutter
@@ -20,14 +19,18 @@ dependencies:
 
   logger: ^2.6.2
   shared_preferences: ^2.5.3
+  url_launcher: ^6.3.2
+  uuid: ^4.5.2
   vibration: ^3.1.5
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  hive_generator: ^2.0.1
   analyzer: ^6.4.1
+
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
